# drf-integrations-framework

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  asgi.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  wsgi.py
.circleci/: config.yml
.github/actions/drf-integrations-framework-build/: action.yml
.github/workflows/: codeql.yml  continuous_integration.yml  release.yml
drf_integrations/: __init__.py  admin.py  apps.py  auth_backends.py  fields.py  forms.py  managers.py  models.py  types.py  urls.py  utils.py
drf_integrations/integrations/: __init__.py  base.py  managers.py  models.py  registry.py
drf_integrations/management/commands/: syncregistry.py
drf_integrations/migrations/: 0001_initial.py  0002_auto_20200623_1421.py  0003_auto_20210118_1317.py  0004_auto_20220407_0838.py  0004_auto_20220503_1428.py  0005_alter_applicationinstallation_id.py  0005_idtoken.py  0006_alter_grant_redirect_uri.py  0006_alter_idtoken_application.py  0006_auto_20230503_0716.py  0006_grant_redirect_uri.py  __init__.py
example/: README.md  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
example/drf_integrations_example/: __init__.py  admin.py  apps.py  models.py
example/drf_integrations_example/api/: auth_backends.py  integrations.py  urls.py  viewsets.py
example/drf_integrations_example/integrations/: ecommerce_viewsets.py  mixpanel.py  shopify.py  urls.py
example/drf_integrations_example/migrations/: 0001_initial.py  0002_auto_20210118_1317.py  0003_auto_20220505_1020.py
tests/: conftest.py  factories.py  integration_samples.py  test_auth_backends.py  test_custom_auth_backend.py  test_migrations.py  test_models.py  test_no_missing_migrations.py  test_utils.py  utils.py
tests/integrations/: test_base.py  test_registry.py
