# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.poetry]
name = "drf-integrations-framework"
version = "0.8.4"
description = "Django REST Framework plugin that simplifies the management of third party integrations"
authors = ["Yoyo <dev@yoyowallet.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yoyowallet/drf-integrations-framework"
repository = "https://github.com/yoyowallet/drf-integrations-framework"
keywords = ["drf"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Framework :: Django',
]
include = [
    "LICENSE",
]
packages = [
    { include="drf_integrations" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
djangorestframework = "^3.11.0"
django-oauth-toolkit = ">=1.3,<3"
django-environ = "^0.9.0"
Pillow = ">=7.0.0,<10.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
factory-boy = "^3.2.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mixpanel = "^4.9.0"
oauth2client = "^4.1.3"
pre-commit = "^2.20.0"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.1"
pytest-django = "^4.5.2"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_standard_library = "dataclasses,typing"
known_first_party = "drf_integrations,example,tests"
default_section = "THIRDPARTY"
skip_glob = "venv/*"
