[metadata]
name = drf-integrations-framework
version = attr: drf_integrations.VERSION
description = Django REST Framework plugin that simplifies the management of third party integrations
keywords = Django, REST, integration, framework
license = MIT License
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
packages = find:
zip_safe = False
include_package_data = True

[flake8]
; Based on https://github.com/psf/black/blob/19.10b0/.flake8
ignore = E203,E266,E501,W503
max-line-length = 99
max-complexity = 18
select = B,C,E,F,W,T4,B9
extend-exclude = venv/
